testing out commits and push using terminal

--- a/1.0 Advanced Project/index.html
+++ b/1.0 Advanced Project/index.html
@@ -113,7 +113,9 @@
 
                                 <h4 class="project__description--subtitle">HTML, CSS Javascript, Vue, Vuex</h4>
 
-                                <p class="project__description--paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam neque asperiores fuga minus. Quas minus eos quo necessitatibus, magni accusamus aliquam a inventore laborum praesentium aut perspiciatis cupiditate nesciunt rem!</p>
+                                <p class="project__description--paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo incidunt voluptates omnis ex architecto inventore dolore, amet corporis. Magni debitis voluptatum illo adipisci aspernatur vel.
+
+                                </p>
 
                                 <div class="project__description--links">
                                     <a href="" class="project__description--link">
@@ -139,7 +141,7 @@
 
                                 <h4 class="project__description--subtitle">HTML, CSS Javascript, Vue, Vuex</h4>
 
-                                <p class="project__description--paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam neque asperiores fuga minus. Quas minus eos quo necessitatibus, magni accusamus aliquam a inventore laborum praesentium aut perspiciatis cupiditate nesciunt rem!</p>
+                                <p class="project__description--paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius inventore ducimus necessitatibus laboriosam dicta, maxime repellat commodi tempora doloremque nobis?</p>
 
                                 <div class="project__description--links">
                                     <a href="" class="project__description--link">
